[package]
name = "multiprint"
description = "A convenient string multiplication utility crate"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Peter Mares"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
