[package]
name = "multiprint"
description = "A convenient string multiplication utility crate"
license = "MIT OR Apache-2.0"
version = "0.1.1"
authors = ["Peter Mares"]
edition = "2018"
homepage = "https://crates.io/crates/multiprint"
repository = "https://github.com/carribus/rust-multiprint"
keywords = ["string", "multiply"]
categories = ["value-formatting"]
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
travis-ci = { repository = "carribus/rust-multiprint" }